fixes scroll overflow, class names

--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ body {
   margin: 0 -10px 0 0;
   background-color: rgba(100, 100, 133, 15%);
   box-shadow: #666 0 0 2px inset;
-  overflow: hidden;  
+  overflow: auto;  
 }
 
 img:hover {
